Fix: horizontal scrollbar on small screen when navbar contains an input field

--- a/bootstrapextracomponents/navbar/navbar.css
+++ b/bootstrapextracomponents/navbar/navbar.css
@@ -15,3 +15,8 @@
 nav .navbar-right .dropdown-menu {
     right: auto;
 }
+
+.bootstrap-extra-navbar .navbar-nav .navbar-form {
+	margin-right: 0;
+	margin-left: 0;
+}
